--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/estilo.css">
+    <title>Conexos</title>
 </head>
+
 <body>
-    
+
+    <header>
+        <img src="imagens/conexos-logo-white (4) 1.png" alt="Logo Conexos">
+            <nav>
+                    <ul>
+                        <li> <a href="index.html">Início</a> </li>
+                        <li> <a href="lista-receitas.html">Planos</a> </li>
+                        <li> <a href="contato.html">Status de solicitações</a> </li>
+                    </ul>
+         </nav>
+    </header>
+
+    <main>
+
+    </main>
+
+
+    <footer>
+        <div class="container">
+            <img src="imagens/conexos-logo-white (4) 1.png" alt="Logo Conexos">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna. incididunt ut labore et dolore magna.</p>
+            <ul>
+                <li> <a href="index.html">Início</a> </li>
+                <li> <a href="lista-receitas.html">Planos</a> </li>
+                <li> <a href="contato.html">Status de solicitações</a> </li>
+            </ul>
+            <p>Projeto desenvolvido na academia Aprendiz Vivo Tech - Gama Academy</p>
+        </div>
+    </footer>
 </body>
+
 </html>
