--- a/index.html
+++ b/index.html
@@ -6,39 +6,148 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilo.css">
     <title>Conexos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 
 <body>
 
     <header>
-        <img src="imagens/conexos-logo-white (4) 1.png" alt="Logo Conexos">
-            <nav>
-                    <ul>
-                        <li> <a href="index.html">Início</a> </li>
-                        <li> <a href="lista-receitas.html">Planos</a> </li>
-                        <li> <a href="contato.html">Status de solicitações</a> </li>
-                    </ul>
-         </nav>
+        <div class="container">
+            <div class="row">
+                <div class="col d-flex justify-content-between align-content-center">
+                    <img src="imagens/logo-header.svg" alt="Logo Conexos">
+                    <nav>
+                        <ul>
+                            <li> <a href="index.html">Início</a> </li>
+                            <li> <a href="lista-receitas.html">Planos</a> </li>
+                            <li> <a href="contato.html">Status de solicitações</a> </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
     </header>
 
     <main>
 
+
+        <h2>CONHEÇA NOSSOS PLANOS</h2>
+
+        <div class="container">
+            <div class="row mx-auto">
+                <div class="d-flex flex-row justify-content-around">
+
+                    <div class="col-3 col-md-3 col-xxl-3 pb-3">
+                        <div class="card">
+                            <h5 class="card-title">Plano 1</h5>
+                            <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
+                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
+                                preserveAspectRatio="xMidYMid slice" focusable="false">
+                                <title>Placeholder</title>
+                                <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%"
+                                    fill="#dee2e6" dy=".3em">Image
+                                    cap</text>
+                            </svg>
+                            <div class="card-body">
+                                <p class="card-text">Plano ideal para espaços residenciais com pequenas famílias.</p>
+                                <ul>
+                                    <li>vantagem x+</li>
+                                    <li>vantagem y+</li>
+                                    <li>vantagem z+</li>
+                                </ul>
+                                <p class="valor">R$ 00,00</p>
+                                <a href="#" class="btn btn-primary">Escolher plano</a>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-3 col-md-3 col-xxl-3 pb-3">
+                        <div class="card">
+                            <h5 class="card-title">Plano 2</h5>
+                            <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
+                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
+                                preserveAspectRatio="xMidYMid slice" focusable="false">
+                                <title>Placeholder</title>
+                                <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%"
+                                    fill="#dee2e6" dy=".3em">Image
+                                    cap</text>
+                            </svg>
+                            <div class="card-body">
+                                <p class="card-text">Plano ideal para espaços residenciais com grandes famílias ou
+                                    startups.
+                                </p>
+                                <ul>
+                                    <li>vantagem x+</li>
+                                    <li>vantagem y+</li>
+                                    <li>vantagem z+</li>
+                                </ul>
+                                <p class="valor">R$ 00,00</p>
+                                <a href="#" class="btn btn-primary">Escolher plano</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-3 col-md-3 col-xxl-3 pb-3">
+                        <div class="card">
+                            <h5 class="card-title">Plano 3</h5>
+                            <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
+                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
+                                preserveAspectRatio="xMidYMid slice" focusable="false">
+                                <title>Placeholder</title>
+                                <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%"
+                                    fill="#dee2e6" dy=".3em">Image
+                                    cap</text>
+                            </svg>
+                            <div class="card-body">
+                                <p class="card-text">Plano ideal para espaços empresariais.</p>
+                                <ul>
+                                    <li>vantagem x+</li>
+                                    <li>vantagem y+</li>
+                                    <li>vantagem z+</li>
+                                </ul>
+                                <p class="valor">R$ 00,00</p>
+                                <a href="#" class="btn btn-primary">Escolher plano</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </main>
+
 
 
     <footer>
         <div class="container">
-            <img src="imagens/conexos-logo-white (4) 1.png" alt="Logo Conexos">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna. incididunt ut labore et dolore magna.</p>
-            <ul>
-                <li> <a href="index.html">Início</a> </li>
-                <li> <a href="lista-receitas.html">Planos</a> </li>
-                <li> <a href="contato.html">Status de solicitações</a> </li>
-            </ul>
+            <div class="row">
+                <img src="imagens/conexos-logo-footer.png" alt="Logo Conexos">
+            </div>
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet, consectetur <br>adipiscing elit, sed do eiusmod tempor <br>incididunt ut
+                    labore et
+                    dolore magna.<br>incididunt ut labore et dolore magna.</p>
+            </div>
+
+            <div class="col">
+                <ul>
+                    <li><a href="index.html">Início</a></li>
+                    <li><a href="lista-receitas.html">Planos</a></li>
+                    <li><a href="contato.html">Status de solicitações</a></li>
+                </ul>
+            </div>
+
+        </div>
+
+        <div class="copyright">
             <p>Projeto desenvolvido na academia Aprendiz Vivo Tech - Gama Academy</p>
         </div>
+
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
