descrição de planos e página para cada um

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilo.css">
+    <link rel="shortcut icon" href="imagens/favicon.svg" type="image/x-icon">
     <title>Conexos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -18,8 +19,8 @@
                 <div class="col d-flex justify-content-between align-content-center">
                     <img src="imagens/logo-header.svg" alt="Logo Conexos">
                     <nav>
-                        <ul>
-                            <li> <a href="index.html">Início</a> </li>
+                        <ul class="menu">
+                            <li> <a href="index.html">Início</a> </li>  
                             <li> <a href="lista-receitas.html">Planos</a> </li>
                             <li> <a href="contato.html">Status de solicitações</a> </li>
                         </ul>
@@ -31,8 +32,7 @@
 
     <main>
 
-
-        <h2>CONHEÇA NOSSOS PLANOS</h2>
+        <h2 class="text-center my-3 my-xl-5">CONHEÇA NOSSOS PLANOS</h2>
 
         <div class="container">
             <div class="row mx-auto">
@@ -40,78 +40,64 @@
 
                     <div class="col-3 col-md-3 col-xxl-3 pb-3">
                         <div class="card">
-                            <h5 class="card-title">Plano 1</h5>
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%"
-                                    fill="#dee2e6" dy=".3em">Image
-                                    cap</text>
-                            </svg>
+                            <h5 class="card-title text-center my-2">Bronze</h5>
+                            <img src="./imagens/ilustra-1.svg" alt="mulher com crianças fazendo joinha.">
                             <div class="card-body">
-                                <p class="card-text">Plano ideal para espaços residenciais com pequenas famílias.</p>
+                                <p class="card-text">Plano ideal para espaços residenciais com pequenas famílias.
+                                </p>
                                 <ul>
-                                    <li>vantagem x+</li>
-                                    <li>vantagem y+</li>
-                                    <li>vantagem z+</li>
+                                    <li>Internet fibra 200 mega</li>
+                                    <li>Dowload até 200 Mbps</li>
+                                    <li>Wi-fi grátis</li>
                                 </ul>
-                                <p class="valor">R$ 00,00</p>
-                                <a href="#" class="btn btn-primary">Escolher plano</a>
+                                <p class="valor">R$ 100,00</p> 
+                                <div class="text-center">
+                                <a href="plano1.html" class="btn btn-success">Escolher plano</a>
                             </div>
                         </div>
                     </div>
-
+                </div>
 
                     <div class="col-3 col-md-3 col-xxl-3 pb-3">
                         <div class="card">
-                            <h5 class="card-title">Plano 2</h5>
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%"
-                                    fill="#dee2e6" dy=".3em">Image
-                                    cap</text>
-                            </svg>
+                            <h5 class="card-title text-center my-2">Ouro</h5>
+                            <img src="./imagens/ilustra-2.svg" alt="um time de 2 mulheres e 2 homens se comunicando.">
                             <div class="card-body">
                                 <p class="card-text">Plano ideal para espaços residenciais com grandes famílias ou
                                     startups.
                                 </p>
                                 <ul>
-                                    <li>vantagem x+</li>
-                                    <li>vantagem y+</li>
-                                    <li>vantagem z+</li>
+                                    <li>Internet fibra 400 mega</li>
+                                    <li>Dowload até 400 Mbps</li>
+                                    <li>Wi-fi grátis</li>
                                 </ul>
-                                <p class="valor">R$ 00,00</p>
-                                <a href="#" class="btn btn-primary">Escolher plano</a>
+                                <p class="valor">R$ 200,00</p> 
+                                <div class="text-center">
+                                <a href="plano2.html" class="btn btn-success">Escolher plano</a>
                             </div>
                         </div>
-                    </div>
+                    </div> 
+                </div>
 
                     <div class="col-3 col-md-3 col-xxl-3 pb-3">
                         <div class="card">
-                            <h5 class="card-title">Plano 3</h5>
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%"
-                                    fill="#dee2e6" dy=".3em">Image
-                                    cap</text>
-                            </svg>
+                            <h5 class="card-title text-center my-2">Diamante</h5>
+                            <img src="./imagens/ilustra-3.svg" alt="vários ambientes com várias pessoas trablhando ao mesmo tempo.">
                             <div class="card-body">
-                                <p class="card-text">Plano ideal para espaços empresariais.</p>
+                                <p class="card-text">Plano ideal para espaços empresariais de alta demanda que precisem
+                                    de maior alcance.</p>
                                 <ul>
-                                    <li>vantagem x+</li>
-                                    <li>vantagem y+</li>
-                                    <li>vantagem z+</li>
+                                    <li>Internet fibra 1 Giga</li>
+                                    <li>Dowload até 1 Giga</li>
+                                    <li>Wi-fi grátis</li>
                                 </ul>
-                                <p class="valor">R$ 00,00</p>
-                                <a href="#" class="btn btn-primary">Escolher plano</a>
+                                <p class="valor">R$ 599,99</p>  
+                                <div class="text-center">
+                                <a href="plano3.html" class="btn btn-success">Escolher plano</a>
                             </div>
                         </div>
                     </div>
+                </div>
                 </div>
             </div>
     </main>
@@ -124,9 +110,10 @@
                 <img src="imagens/conexos-logo-footer.png" alt="Logo Conexos">
             </div>
             <div class="col">
-                <p>Lorem ipsum dolor sit amet, consectetur <br>adipiscing elit, sed do eiusmod tempor <br>incididunt ut
-                    labore et
-                    dolore magna.<br>incididunt ut labore et dolore magna.</p>
+                <p>Empresa criada visando a diversidade dos clientes.<br>
+                    Acreditamos que apresentando de maneira simples<br> os benefícios de cada plano, fica a total
+                    escolha<br>do
+                    cliente, com um sistema simples para solicitar.</p>
             </div>
 
             <div class="col">
