atualização das págs dos planos e nomes dos planos

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 </ul>
                                 <p class="valor">R$ 100,00</p> 
                                 <div class="text-center">
-                                <a href="plano1.html" class="btn btn-success">Escolher plano</a>
+                                <a href="bronze.html" class="btn btn-success">Escolher plano</a>
                             </div>
                         </div>
                     </div>
@@ -60,7 +60,7 @@
 
                     <div class="col-3 col-md-3 col-xxl-3 pb-3">
                         <div class="card">
-                            <h5 class="card-title text-center my-2">Ouro</h5>
+                            <h5 class="card-title text-center my-2">Prata</h5>
                             <img src="./imagens/ilustra-2.svg" alt="um time de 2 mulheres e 2 homens se comunicando.">
                             <div class="card-body">
                                 <p class="card-text">Plano ideal para espaços residenciais com grandes famílias ou
@@ -73,7 +73,7 @@
                                 </ul>
                                 <p class="valor">R$ 200,00</p> 
                                 <div class="text-center">
-                                <a href="plano2.html" class="btn btn-success">Escolher plano</a>
+                                <a href="prata.html" class="btn btn-success">Escolher plano</a>
                             </div>
                         </div>
                     </div> 
@@ -81,7 +81,7 @@
 
                     <div class="col-3 col-md-3 col-xxl-3 pb-3">
                         <div class="card">
-                            <h5 class="card-title text-center my-2">Diamante</h5>
+                            <h5 class="card-title text-center my-2">Ouro</h5>
                             <img src="./imagens/ilustra-3.svg" alt="vários ambientes com várias pessoas trablhando ao mesmo tempo.">
                             <div class="card-body">
                                 <p class="card-text">Plano ideal para espaços empresariais de alta demanda que precisem
@@ -93,7 +93,7 @@
                                 </ul>
                                 <p class="valor">R$ 599,99</p>  
                                 <div class="text-center">
-                                <a href="plano3.html" class="btn btn-success">Escolher plano</a>
+                                <a href="ouro.html" class="btn btn-success">Escolher plano</a>
                             </div>
                         </div>
                     </div>
