--- a/bronze.html
+++ b/bronze.html
@@ -32,12 +32,22 @@
 
     <main>
 
+        <div class="info-planos">
+            <h3 class="tittle my-5">Plano Bronze</h3>
+            <p>Plano ideal para espaços residenciais com pequenas famílias.
+            <p>A velocidade anunciada de acesso de tráfego na internet é nominal máxima, podendo sofrer variações
+                decorrentes de fatores externos. Consulte a disponibilidade na sua localidade. Assistência Home Assist
+                válida até por 30 dias, a partir da data de instalação.</p>
+            <ul>
+                <li>Internet fibra 200 mega</li>
+                <li>Dowload até 200 Mbps</li>
+                <li>Wi-fi grátis</li>
+            </ul>
+            <p class="valor">R$ 100,00</p>
+        </div>
 
 
-
-
-
-    </main> 
+    </main>
 
     <footer>
         <div class="container">
@@ -73,4 +83,3 @@
 </body>
 
 </html>
-
