--- a/ouro.html
+++ b/ouro.html
@@ -30,14 +30,24 @@
         </div>
     </header>
 
-    <main>
+    <main>  
 
+        <div class="info-planos">
+            <h3 class="tittle my-5">Plano ouro</h3>
+            <p>Plano ideal para espaços empresariais de alta demanda que precisem
+                de maior alcance.</p>
+            <p>A velocidade anunciada de acesso de tráfego na internet é nominal máxima, podendo sofrer variações
+                decorrentes de fatores externos. Consulte a disponibilidade na sua localidade. Assistência Home Assist
+                válida até por 30 dias, a partir da data de instalação.</p>
+                <ul>
+                    <li>Internet fibra 1 Giga</li>
+                    <li>Dowload até 1 Giga</li>
+                    <li>Wi-fi grátis</li>
+                </ul>
+            <p class="valor">R$ 599,99</p>
+        </div>
 
-
-
-
-
-    </main>
+    </main> 
 
     <footer>
         <div class="container">
@@ -73,3 +83,4 @@
 </body>
 
 </html>
+
