atualização header e footer

--- a/status.html
+++ b/status.html
@@ -44,23 +44,7 @@
         </div>
     </header>
 
-
     <main>
-
-        <div class="info-planos">
-            <h3 class="tittle my-5">Plano Prata</h3>
-            <p>Plano ideal para espaços residenciais com grandes famílias ou
-                startups.</p>
-            <p>A velocidade anunciada de acesso de tráfego na internet é nominal máxima, podendo sofrer variações
-                decorrentes de fatores externos. Consulte a disponibilidade na sua localidade. Assistência Home Assist
-                válida até por 30 dias, a partir da data de instalação.</p>
-            <ul>
-                <li>Internet fibra 400 mega</li>
-                <li>Dowload até 400 Mbps</li>
-                <li>Wi-fi grátis</li>
-            </ul>
-            <p class="valor">R$ 200,00</p>
-        </div>
 
     </main>
 
@@ -79,8 +63,9 @@
             <div class="col">
                 <ul>
                     <li><a href="index.html">Início</a></li>
-                    <li><a href="contato.html">Status de solicitações</a></li>
+                    <li><a href="status.html">Status de solicitações</a></li>
                     <li><a href="bronze.html">Bronze</a></li>
+                    <li><a href="prata.html">Prata</a></li>
                     <li><a href="ouro.html">Ouro</a></li>
                 </ul>
             </div>
