--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilo.css">
     <link rel="shortcut icon" href="imagens/favicon.svg" type="image/x-icon">
     <title>Conexos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
@@ -20,13 +20,27 @@
                     <img src="imagens/logo-header.svg" alt="Logo Conexos">
                     <nav>
                         <ul class="menu">
-                            <li> <a href="index.html">Início</a> </li>  
-                            <li> <a href="lista-receitas.html">Planos</a> </li>
-                            <li> <a href="contato.html">Status de solicitações</a> </li>
+                            <li> <a href="index.html">Início</a> </li>
+                            <li>
+                                <div class="dropdown">
+                                    <button class="btn btn-success dropdown-toggle" type="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        Planos
+                                    </button>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="bronze.html">Bronze</a></li>
+                                        <li><a class="dropdown-item" href="prata.html">Prata</a></li>
+                                        <li><a class="dropdown-item" href="ouro.html">Ouro</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li> <a href="status.html">Status de solicitações</a> </li>
                         </ul>
-                    </nav>
+
                 </div>
+                </nav>
             </div>
+        </div>
         </div>
     </header>
 
@@ -50,13 +64,13 @@
                                     <li>Dowload até 200 Mbps</li>
                                     <li>Wi-fi grátis</li>
                                 </ul>
-                                <p class="valor">R$ 100,00</p> 
+                                <p class="valor">R$ 100,00</p>
                                 <div class="text-center">
-                                <a href="bronze.html" class="btn btn-success">Escolher plano</a>
+                                    <a href="bronze.html" class="btn btn-success">Escolher plano</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
                     <div class="col-3 col-md-3 col-xxl-3 pb-3">
                         <div class="card">
@@ -71,18 +85,19 @@
                                     <li>Dowload até 400 Mbps</li>
                                     <li>Wi-fi grátis</li>
                                 </ul>
-                                <p class="valor">R$ 200,00</p> 
+                                <p class="valor">R$ 200,00</p>
                                 <div class="text-center">
-                                <a href="prata.html" class="btn btn-success">Escolher plano</a>
+                                    <a href="prata.html" class="btn btn-success">Escolher plano</a>
+                                </div>
                             </div>
                         </div>
-                    </div> 
-                </div>
+                    </div>
 
                     <div class="col-3 col-md-3 col-xxl-3 pb-3">
                         <div class="card">
                             <h5 class="card-title text-center my-2">Ouro</h5>
-                            <img src="./imagens/ilustra-3.svg" alt="vários ambientes com várias pessoas trablhando ao mesmo tempo.">
+                            <img src="./imagens/ilustra-3.svg"
+                                alt="vários ambientes com várias pessoas trablhando ao mesmo tempo.">
                             <div class="card-body">
                                 <p class="card-text">Plano ideal para espaços empresariais de alta demanda que precisem
                                     de maior alcance.</p>
@@ -91,13 +106,13 @@
                                     <li>Dowload até 1 Giga</li>
                                     <li>Wi-fi grátis</li>
                                 </ul>
-                                <p class="valor">R$ 599,99</p>  
+                                <p class="valor">R$ 599,99</p>
                                 <div class="text-center">
-                                <a href="ouro.html" class="btn btn-success">Escolher plano</a>
+                                    <a href="ouro.html" class="btn btn-success">Escolher plano</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
                 </div>
             </div>
     </main>
@@ -119,8 +134,10 @@
             <div class="col">
                 <ul>
                     <li><a href="index.html">Início</a></li>
-                    <li><a href="lista-receitas.html">Planos</a></li>
-                    <li><a href="contato.html">Status de solicitações</a></li>
+                    <li><a href="status.html">Status de solicitações</a></li>
+                    <li><a href="bronze.html">Bronze</a></li>
+                    <li><a href="prata.html">Prata</a></li>
+                    <li><a href="ouro.html">Ouro</a></li>
                 </ul>
             </div>
 
