--- a/ouro.html
+++ b/ouro.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilo.css">
     <link rel="shortcut icon" href="imagens/favicon.svg" type="image/x-icon">
     <title>Conexos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
@@ -19,18 +19,33 @@
                 <div class="col d-flex justify-content-between align-content-center">
                     <img src="imagens/logo-header.svg" alt="Logo Conexos">
                     <nav>
-                        <ul>
+                        <ul class="menu">
                             <li> <a href="index.html">Início</a> </li>
-                            <li> <a href="lista-receitas.html">Planos</a> </li>
-                            <li> <a href="contato.html">Status de solicitações</a> </li>
+                            <li>
+                                <div class="dropdown">
+                                    <button class="btn btn-success dropdown-toggle" type="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        Planos
+                                    </button>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="bronze.html">Bronze</a></li>
+                                        <li><a class="dropdown-item" href="prata.html">Prata</a></li>
+                                        <li><a class="dropdown-item" href="ouro.html">Ouro</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li> <a href="status.html">Status de solicitações</a> </li>
                         </ul>
-                    </nav>
+
                 </div>
+                </nav>
             </div>
+        </div>
         </div>
     </header>
 
-    <main>  
+
+    <main>
 
         <div class="info-planos">
             <h3 class="tittle my-5">Plano ouro</h3>
@@ -39,15 +54,15 @@
             <p>A velocidade anunciada de acesso de tráfego na internet é nominal máxima, podendo sofrer variações
                 decorrentes de fatores externos. Consulte a disponibilidade na sua localidade. Assistência Home Assist
                 válida até por 30 dias, a partir da data de instalação.</p>
-                <ul>
-                    <li>Internet fibra 1 Giga</li>
-                    <li>Dowload até 1 Giga</li>
-                    <li>Wi-fi grátis</li>
-                </ul>
+            <ul>
+                <li>Internet fibra 1 Giga</li>
+                <li>Dowload até 1 Giga</li>
+                <li>Wi-fi grátis</li>
+            </ul>
             <p class="valor">R$ 599,99</p>
         </div>
 
-    </main> 
+    </main>
 
     <footer>
         <div class="container">
@@ -64,8 +79,9 @@
             <div class="col">
                 <ul>
                     <li><a href="index.html">Início</a></li>
-                    <li><a href="lista-receitas.html">Planos</a></li>
-                    <li><a href="contato.html">Status de solicitações</a></li>
+                    <li><a href="status.html">Status de solicitações</a></li> 
+                    <li><a href="bronze.html">Bronze</a></li>
+                    <li><a href="prata.html">Prata</a></li>
                 </ul>
             </div>
 
@@ -83,4 +99,3 @@
 </body>
 
 </html>
-
