--- a/bronze.html
+++ b/bronze.html
@@ -61,6 +61,54 @@
             <p class="valor">R$ 100,00</p>
         </div>
 
+<div class="form-container">
+
+    <div class="card" style="width: 40rem;">
+        <div class="card-body my-2">
+            <form>
+                <h1 class="Titulo-form-plano">Contratação do plano</h1>
+                <div class="card-text">
+                <div class="col-5">
+                    <div class="mb-3">
+                        <label for="nome" class="form-label col-form-label-sm">Nome Completo</label>
+                        <input type="nome" class="form-control" id="Nome">
+                    </div>
+                    <div class="mb-3">
+                        <label for="cpf" class="form-label col-form-label-sm">CPF</label>
+                        <input type="cpf" class="form-control" id="cpf">
+                    </div>
+                    <div class="mb-3">
+                        <label for="Telefone" class="form-label col-form-label-sm">Telefone para contato</label>
+                        <input type="telefone" class="form-control" id="telefone">
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label col-form-label-sm">Insira seu Email</label>
+                        <input type="email" class="form-control" id="email">
+                    </div>
+                    <div class="mb-3">
+                        <label for="plano" class="form-label col-form-label-sm">Selecione o plano</label>
+                        <select class="form-select">
+                            <option value="1">Bronze</option>
+                            <option value="2">Prata</option>
+                            <option value="3">Ouro</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="plano" class="form-label col-form-label-sm">Preferência de horario para visita
+                            técnica</label>
+                        <select class="form-select">
+                            <option value="1">8:00 ás 12:00</option>
+                            <option value="2">12:00 ás 16:00</option>
+                            <option value="3">16:00 ás 20:00</option>
+                        </select>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
 
     </main>
 
