--- a/prata.html
+++ b/prata.html
@@ -79,7 +79,7 @@
             <div class="col">
                 <ul>
                     <li><a href="index.html">Início</a></li>
-                    <li><a href="contato.html">Status de solicitações</a></li>
+                    <li><a href="status.html">Status de solicitações</a></li>
                     <li><a href="bronze.html">Bronze</a></li>
                     <li><a href="ouro.html">Ouro</a></li>
                 </ul>
