--- a/index.html
+++ b/index.html
@@ -115,7 +115,36 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Solicitação -->
+            <div class="solicitacao-1">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="img-status">
+                                <img src="ilustra_status.png" alt="ilustra_status">
+                            </div>
+                        </div>
+                        <div class=" col-6">
+                            <div class="visita">
+                                <h2 class="tittle ">STATUS DE SOLICITAÇÕES</h2>
+
+                                <p>Após contratar um plano, você receberá um código via SMS para acompanhar o
+                                    andamento da solicitação e agendamento da visita técnica</p>
+
+                                <div class="button">
+                                    <a href="status.html" class="btn btn-success">Vereficar status</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+
     </main>
+
 
 
 
