--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="img-fluid d-md-none" src="./imagens/banner1/banner1-mobile.png" width="576" height="400"
+                    <img class="img-fluid d-md-none" src="./imagens/banner1/banner1-mobile.webp" width="576" height="400"
                         alt="Modelo feminina com blusa verde apontando para texto ao lado direito: A melhor banda larga do Brasil agora conta com mais postos de atendimento!">
                     <img class="img-fluid d-none d-md-block d-xl-none" src="./imagens/banner1/banner1-tablet.webp"
                         width="992" height="400"
